Add debugging logs and fix canvas positioning for N-dimensional game

--- a/tictactoe-nd.html
+++ b/tictactoe-nd.html
@@ -679,5 +679,10 @@
         // Initial display update
         updateConfigDisplay();
     </script>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
+    <script src="nd-engine.js"></script>
+    <script src="tictactoe-nd.js"></script>
 </body>
 </html>
